# playwright_handson

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
pages/: login.ts
screenplay/questions/: index.ts  status.ts
screenplay/screens/: index.ts  login.ts  status.ts
screenplay/tasks/: login.ts
tests/: fluent.spec.ts  pom.spec.ts  screenplay.spec.ts  teseus.spec.ts  vanilla.spec.ts
tests/simple/: teseus.spec.ts
